--- a/pom.xml
+++ b/pom.xml
@@ -4,12 +4,12 @@
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
-  <groupId>com.chixing</groupId>
-  <artifactId>maven-test</artifactId>
+  <groupId>com.aurora</groupId>
+  <artifactId>shell-shoes</artifactId>
   <version>1.0-SNAPSHOT</version>
   <packaging>war</packaging>
 
-  <name>maven-test Maven Webapp</name>
+  <name>shell-shoes Maven Webapp</name>
   <!-- FIXME change it to the project's website -->
   <url>http://www.example.com</url>
 
@@ -27,24 +27,27 @@
       <version>4.11</version>
       <scope>test</scope>
     </dependency>
+
     <dependency>
       <groupId>org.projectlombok</groupId>
       <artifactId>lombok</artifactId>
       <version>1.18.2</version>
       <scope>provided</scope>
     </dependency>
+
     <dependency>
       <groupId>com.google.code.gson</groupId>
       <artifactId>gson</artifactId>
       <version>2.8.5</version>
-    </dependency><!-- https://mvnrepository.com/artifact/javax.servlet.jsp.jstl/jstl -->
+    </dependency>
 
 
     <dependency>
-      <groupId>javax.servlet.jsp.jstl</groupId>
-      <artifactId>jstl</artifactId>
-      <version>1.2</version>
+      <groupId>org.springframework.security</groupId>
+      <artifactId>spring-security-core</artifactId>
+      <version>5.0.7.RELEASE</version>
     </dependency>
+
 
 
     <!-- https://mvnrepository.com/artifact/javax.servlet/jstl -->
@@ -104,7 +107,7 @@
   </dependencies>
 
   <build>
-    <finalName>maven-test</finalName>
+    <finalName>shell-shoes</finalName>
     <pluginManagement><!-- lock down plugins versions to avoid using Maven defaults (may be moved to parent pom) -->
       <plugins>
         <plugin>
