--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -5,27 +5,20 @@
          http://xmlns.jcp.org/xml/ns/javaee/web-app_4_0.xsd"
          version="4.0">
 
+    <error-page>
+        <error-code>400</error-code>
+        <location>/error.jsp</location>
+    </error-page>
 
-    <filter>
-        <filter-name>IllegalCharacterFilter</filter-name>
-        <filter-class>com.aurora.web.filter.IllegalCharacterFilter</filter-class>
-    </filter>
+    <error-page>
+        <error-code>500</error-code>
+        <location>/error.jsp</location>
+    </error-page>
 
-    <filter-mapping>
-        <filter-name>IllegalCharacterFilter</filter-name>
-        <url-pattern>/*</url-pattern>
-    </filter-mapping>
-
-
-    <filter>
-        <filter-name>KeywordBlockingFilter</filter-name>
-        <filter-class>com.aurora.web.filter.KeywordBlockingFilter</filter-class>
-    </filter>
-
-    <filter-mapping>
-        <filter-name>KeywordBlockingFilter</filter-name>
-        <url-pattern>/finalFilterComment</url-pattern>
-    </filter-mapping>
+    <error-page>
+        <error-code>403</error-code>
+        <location>/error.jsp</location>
+    </error-page>
 
     <servlet-mapping>
         <servlet-name>default</servlet-name>
@@ -37,4 +30,8 @@
         <url-pattern>*.js</url-pattern>
     </servlet-mapping>
 
+    <servlet-mapping>
+        <servlet-name>default</servlet-name>
+        <url-pattern>*.img</url-pattern>
+    </servlet-mapping>
 </web-app>
