--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -5,20 +5,20 @@
          http://xmlns.jcp.org/xml/ns/javaee/web-app_4_0.xsd"
          version="4.0">
 
-    <error-page>
-        <error-code>400</error-code>
-        <location>/error.jsp</location>
-    </error-page>
+    <!--<error-page>-->
+        <!--<error-code>400</error-code>-->
+        <!--<location>/error.jsp</location>-->
+    <!--</error-page>-->
 
-    <error-page>
-        <error-code>500</error-code>
-        <location>/error.jsp</location>
-    </error-page>
+    <!--<error-page>-->
+        <!--<error-code>500</error-code>-->
+        <!--<location>/error.jsp</location>-->
+    <!--</error-page>-->
 
-    <error-page>
-        <error-code>403</error-code>
-        <location>/error.jsp</location>
-    </error-page>
+    <!--<error-page>-->
+        <!--<error-code>403</error-code>-->
+        <!--<location>/error.jsp</location>-->
+    <!--</error-page>-->
 
     <servlet-mapping>
         <servlet-name>default</servlet-name>
